fixed overflow scroll bar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -189,7 +189,6 @@
 #allGames {
   display: flex;
   justify-content: flex-start;
-  overflow: scroll;
 }
 
 #allGamesBox {
